<resources>
    <string name="app_name">UnitorM</string>
    <string name="app_version">3.1.1b2</string>
    <string name="app_ad">ca-app-pub-7873521316289922/9694048818</string>
    <string name="per_re_title">Unitor Needs Permission</string>
    <string name="per_re_content">Unitor needs \'Write to storage (EXTERNAL_WRITE)\' permission. If you don\'t Unitor cna\'t save Unipack!</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="unable_save">You will not be able to save UniPack.</string>
    <string name="setting">Setting</string>
    <string name="importing">Import</string>
    <string name="newPack">New Pack</string>
    <string name="label_edit">Edit</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_App">App Setting</string>
    <string name="Edit_title">Title</string>
    <string name="Edit_producer">Producer</string>
    <string name="Edit_chain">Chain</string>
    <string name="Dialog_make">create</string>
    <string name="Dialog_null">Please fill in all blanks</string>
    <string name="back">Press back button once again.</string>
    <string name="Info_null_all">Please fill in all blanks in \'Info Tab\'</string>
    <string name="Check_Squ_true">Square Button Enable</string>
    <string name="Save">save</string>
    <string name="Text_info">\'Info\' contents</string>
    <string name="KeySound_add">Load Sounds</string>
    <string name="KeySound_test">Test(Beta)</string>
    <string name="KeySound_edit">Edit</string>
    <string name="Text_nochain">Please set \'Chain\' in Info Tab</string>
    <string name="Popup_play">Play</string>
    <string name="Popup_dekete">Delete</string>
    <string name="Popup_edit">Edit</string>
    <string name="Asynk_Sound_load">Loading Sounds...</string>
    <string name="Dial_sound_del">Delete</string>
    <string name="Dial_sound_ask">Are you sure delete \'%s\'?</string>
    <string name="Text_current">Now: \'%s\'</string>
    <string name="Check_delete">Delete sound</string>
    <string name="Dialog_Asksave">Save?</string>
    <string name="Dialog_save">save</string>
    <string name="Dialog_cancel">cancel</string>
    <string name="Dialog_Title_del">Delete \'%s\'</string>
    <string name="Dialog_die_T">Restore \'%s\'</string>
    <string name="Dialog_die_M">\'%s\' was not saved before. Do you want to restore it?</string>
    <string name="Dialog_die_OK">Restore</string>
    <string name="Dialog_die_NO">No</string>
    <string name="DialFrag_Sound_play">If you do \'Long Click\', you can play Sound</string>
    <string name="DialFrag_Sound_ok">Add</string>
    <string name="DialFrag_Sound_no">Cancel</string>
    <string name="DialogFrag_FileS_cant">Can\'t read this folder</string>
    <string name="Dialog_copy_sounds">Copy Sounds</string>
    <string name="Toast_Reload">Reloading sounds</string>
    <string name="DialFrag_Select_all">Select All</string>
    <string name="Btn_ADD">Add</string>
    <string name="Btn_play">Play</string>
    <string name="Btn_addLED">New LED</string>
    <string name="Check_delete_LED">Delete LED</string>
    <string name="Check_LEDoff">LED OFF</string>
    <string name="ProgressDial_LED_T">Loading LED...</string>
    <string name="ProgressDial_LED_T_Delete">Unloading LED...</string>
    <string name="Menu_deleteLED">Delete</string>
    <string name="Menu_upLED">Up</string>
    <string name="Menu_downLED">Down</string>
    <string name="Menu_EditLED">Edit</string>
    <string name="Button_Edit_ather">Edit another</string>
    <string name="Edit_delay">Delay value(only number, Millisecond)</string>
    <string name="Toast_only">Please input only number!</string>
    <string name="Toast_mk_LED_Fail_count">Can\'t make LED. You can make 26 LEDs in one button.</string>
    <string name="Progress_LED_change">Changing...</string>
    <string name="Progress_saveLED">LED Saving..</string>
    <string name="Dialog_delay_set">Change delay value</string>
    <string name="Dialog_btn_change">change</string>
    <string name="Dialog_delete">Delete \'Frame\'?</string>
    <string name="Dialog_btn_delete">delete</string>
    <string name="Menu_saveAll">Save All</string>
    <string name="Menu_zip">Export to Zip</string>
    <string name="Dialog_msg_info">Saving \'info\'..</string>
    <string name="Dialog_msg_keySound">Saving \'keySound\'..</string>
    <string name="Toast_saveFinish">Save Finish</string>
    <string name="Dialog_Zip">Zipping..</string>
    <string name="Dialog_Zip_finish">Export Finish</string>
    <string name="Dialog_Zip_path">Export File path: </string>
    <string name="Dialog_btn_close">close</string>
    <string name="Dialog_getUniapck">Import Unipack</string>
    <string name="DialogFrag_FileU_explain">Please select \'Unipack\'</string>
    <string name="Progress_Unzip_M">\'%s\' unzipping...</string>
    <string name="Progress_Unzip_F">Failed</string>
    <string name="Dialog_ok">Ok</string>
    <string name="Pref_screen">Keep Screen On</string>
    <string name="Pref_screen_on">Keep Screen On during editing</string>
    <string name="Pref_screen_off">Keep screen On mode off</string>
    <string name="Progress_W_Unload">Waitting for Unloading finish...</string>
</resources>
